<?xml version="1.0" encoding="utf-8"?>

<!-- LAYOUT CONFIGURATION -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/puzzle_background_gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/puzzle_input_1"
        android:layout_marginTop="@dimen/puzzle_margin"
        android:background="@color/input_background_gray"
        android:clickable="true"
        android:focusable="true"
        android:tint="@color/button_text"
        android:padding="1dp"
        android:layout_width="@dimen/puzzle_input_width"
        android:layout_height="@dimen/puzzle_input_height"
        android:layout_marginLeft="@dimen/input_padding"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/puzzle_input_2"
        android:layout_marginTop="@dimen/puzzle_margin"
        android:background="@color/input_background_gray"
        android:clickable="true"
        android:focusable="true"
        android:tint="@color/button_text"
        android:padding="1dp"
        android:layout_marginLeft="@dimen/input_padding"
        android:layout_width="@dimen/puzzle_input_width"
        android:layout_height="@dimen/puzzle_input_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/puzzle_input_1" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/puzzle_input_3"
        android:layout_marginTop="@dimen/puzzle_margin"
        android:background="@color/input_background_gray"
        android:clickable="true"
        android:focusable="true"
        android:tint="@color/button_text"
        android:padding="1dp"
        android:layout_marginLeft="@dimen/input_padding"
        android:layout_width="@dimen/puzzle_input_width"
        android:layout_height="@dimen/puzzle_input_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/puzzle_input_2" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/puzzle_input_4"
        android:layout_marginTop="@dimen/puzzle_margin"
        android:background="@color/input_background_gray"
        android:clickable="true"
        android:focusable="true"
        android:tint="@color/button_text"
        android:padding="1dp"
        android:layout_marginLeft="@dimen/input_padding"
        android:layout_width="@dimen/puzzle_input_width"
        android:layout_height="@dimen/puzzle_input_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/puzzle_input_3" />

    <!-- HOLDS THE LOCK ICON -->
    <ImageView
        android:id="@+id/lock_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/lock_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/puzzle_input_2"/>

    <Button
        android:id="@+id/clear_puzzle"
        android:backgroundTint="@color/button_red"
        android:textColor="@color/button_text"
        android:layout_width="@dimen/small_button_width"
        android:layout_height="@dimen/small_button_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/puzzle_input_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lock_icon"
        android:text="@string/clear_btn_text"
        android:onClick="clearPuzzle" />

    <TextView
        android:textColor="@color/button_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/puzzle_solution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/clear_puzzle"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clear_puzzle"
        android:text="@string/puzzle_solution"/>

    <Button
        android:id="@+id/solve_puzzle"
        android:backgroundTint="@color/button_red"
        android:textColor="@color/button_text"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/puzzle_input_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/puzzle_solution"
        android:text="@string/solve_btn_text" />

</androidx.constraintlayout.widget.ConstraintLayout>